[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://src/ui/info_panel.gd" id="1_info_panel"]

[node name="InfoPanel" type="PanelContainer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 70.0
offset_right = -10.0
offset_bottom = 350.0
grow_horizontal = 0
script = ExtResource("1_info_panel")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="TitleLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
text = "Building Info"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="ContentContainer" type="VBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 3

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="MarginContainer/VBox"]
layout_mode = 2
text = "Close"
